# cgaid

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  main.rs
src/chat/: mod.rs  record.rs
src/notifier/: mod.rs  webhook.rs
